<resources>
    <string name="app_name">EjerciciosModulo4</string>
    <!--    activity selection component-->
    <string name="label_has_credit_card">¿Do you have credit card?</string>
    <string name="label_gender_male">Man</string>
    <string name="label_title_fragment">Ejemplo de fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button_text">LOG IN</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="register_here">Register here</string>
    <string name="required_hint">*Required</string>
    <string name="new_member">New Member!</string>
    <string name="name_hint">Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="register_button_text">REGISTER</string>
    <string name="welcome_to_my_app">Welcome to my App</string>
    <string name="name_text_view">Name: %s</string>
    <string name="last_name_text_view">Last Name: %s</string>
    <string name="email_text_view">Email: %s</string>
    <string name="password_text_view">Password: %s</string>
    <string name="invalid_email">Please enter a valid email address</string>
    <string name="enter_email">Please enter an email address</string>
    <string name="enter_password">Please enter a password</string>
    <string name="enter_name">Please enter a name</string>
    <string name="enter_last_name">Please enter a last name</string>
</resources>